kubernetes/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - jenkins.jmpesp.local
      - artifactory.jmpesp.local
      - gitlab.jmpesp.local
      - sonar.jmpesp.local
  rules:
  - host: jenkins.jmpesp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  - host: artifactory.jmpesp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory
            port:
              number: 8082
  - host: gitlab.jmpesp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
  - host: sonar.jmpesp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar
            port:
              number: 9000
